	(nethack-unassigned-accelerator-index): New variable.
	(nethack-specify-accelerator): New function.
	(nethack-api-add-menu): Specify accelerators for menus that do
	not.
	(nethack-menu-cancel): New function.
	(nethack-menu-reset-keymap): New function.
	(nethack-api-display-nhwindow): Don't split vertically.  Protect
	the status and message windows.

	* nethack.el (nethack): Kill off leftover buffers before starting.
	(nethack-buffer-name-alist): Remove.
	(nethack-buffer-id-alist): Remove.
	(nethack-get-buffer): Rename to `nethack-buffer'.
	(nethack-map-mode): Don't kill-local-variables.
	(nethack-create-buffer): Remove.
	(nethack-set-status-line): Remove, code moved into
	`nethack-api-putstr'.
	(nethack-print-status-lines): Likewise.
	(nethack-restore-windows): Comment out.

2001-10-16  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el: Don't require nethack-menu.
	(nethack-start-program): Removed reference to obsolete variable.
	(nethack-process-send-string): Format log output nicely.
	(nethack-process-send): New function.
	(nethack-process-filter): Clobbering the point in the
	process-buffer no longer breaks processing.
	(nethack-log-string): Log messages right into the process buffer.
	(nethack-handle-command): Use `nconc' instead of `append'.

	* nethack-menu.el: Removed from repository.

	* nethack-api.el (nethack-api-display-file): Make an attempt at
	displaying file.
	(nethack-menu): New variable.
	(nethack-menu-item-print): New function.
	(nethack-menu-how): New variable.
	(nethack-menu-toggle-item): New function.
	(nethack-api-start-menu): Rewrite, no longer use widgets, but ewoc
	instead.
	(nethack-api-add-menu): Likewise.
	(nethack-api-end-menu): Likewise.
	(nethack-api-select-menu): Likewise.
	(ewoc): Require 'ewoc for menus.

2001-07-22  shawn  <sabetts@diggin.lamenet.tmp>

	* nethack-menu.el (nethack-menu-fill-accelerators): new function
	(nethack-menu-draw): fill in valid accelerators for items that do
	not have them.